# cex-signal-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  configuring.md  contributing.md  strategies.md
examples/: with-cex-watch-mcp.md
src/cex_signal_lab/: __init__.py  binance.py  config.py  env_filter.py  executor.py  ledger.py  lock.py  logger.py  monitor.py  notify.py  scanner.py  summary.py
src/cex_signal_lab/strategies/: __init__.py  base.py  crash_bounce.py  funding_extreme_neg.py  funding_extreme_pos.py  funding_flip.py  pump_short.py
tests/: test_config.py  test_executor.py  test_ledger.py  test_lock.py
