[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cex-signal-lab"
version = "0.2.0"
description = "Open lab for rule-based crypto signal strategies on centralized exchanges. Pluggable strategies, paper-trades, no API keys, fully transparent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zane", email = "zane@cex101.com" },
]
keywords = ["crypto", "signals", "binance", "perpetual", "funding-rate", "paper-trading"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
cex-signal-lab = "cex_signal_lab.scanner:main"
cex-signal-summary = "cex_signal_lab.summary:main"

[project.urls]
Homepage = "https://github.com/Zanecex101/cex-signal-lab"
Issues = "https://github.com/Zanecex101/cex-signal-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cex_signal_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
